# pickAndPlace-PR2

./: .clang-format  .gitmodules  README.md
.github/workflows/: industrial_ci_action.yml
motion_planning/: README.md
motion_planning/move_group_manager/: CMakeLists.txt  package.xml
motion_planning/move_group_manager/include/move_group_manager/: move_group_manager.h
motion_planning/move_group_manager/src/: move_group_manager.cpp
motion_planning/planning_scene_manager/: CMakeLists.txt  package.xml
motion_planning/planning_scene_manager/include/planning_scene_manager/: planning_scene_manager.h
motion_planning/planning_scene_manager/launch/: add_collision_box.launch
motion_planning/planning_scene_manager/src/: add_collision_box_node.cpp  planning_scene_manager.cpp
perception/: README.md
perception/depth_servers/: CMakeLists.txt  package.xml
perception/depth_servers/src/: depth_server.cpp  mask2pcl_server.cpp
perception/depth_servers/srv/: depth_server.srv  mask2pcl_server.srv
perception/rviz_visualizer/: CMakeLists.txt  package.xml
perception/rviz_visualizer/include/rviz_visualizer/: rviz_visualizer.h
perception/rviz_visualizer/src/: rviz_visualizer.cpp  rviz_visualizer_node.cpp
perception/table_detection/: CMakeLists.txt  package.xml
perception/table_detection/config/: default.yaml
perception/table_detection/include/table_detection/: table_detection.h
perception/table_detection/launch/: table_detection.launch
perception/table_detection/src/: table_detection.cpp  table_detection_node.cpp
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/config/: gpd_default.yaml  rviz_config.rviz
pick_and_place/launch/: pick_and_place.launch
pick_and_place/src/: pick_place_moveit.cpp
