<?xml version="1.0"?>
<package>

  <name>table_detection</name>
  <version>0.0.1</version>
  <description>The table_detection package.</description>

  <maintainer email="meeso@informatik.uni-freiburg.de">Oier Mees</maintainer>
  <author email="hauffn@informatik.uni-freiburg.de">Nico Hauff</author>
  <author email="eitel@cs.uni-freiburg.de">Andreas Eitel</author>
  <author email="meeso@informatik.uni-freiburg.de">Oier Mees</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>planning_scene_manager</build_depend>
  <build_depend>rviz_visualizer</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>planning_scene_manager</run_depend>
  <run_depend>rviz_visualizer</run_depend>
  <run_depend>libpcl-all</run_depend>

</package>